--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Game</title>
-    <link rel="stylesheet" href="static/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <base href=".">
   </head>
   <body>
     <canvas id="gameCanvas" width="1024" height="768"></canvas>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="src/index.ts"></script>
   </body>
 </html>
